samples/_failures_safe/1761128674_8b352a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_31b22daf.c: In function ‘next_token’:
./samples/SAFE/__tmp_31b22daf.c:167:41: error: expected ‘)’ at end of input
  167 |         token.value[0] = next_char(lexer
      |                                   ~     ^
      |                                         )
./samples/SAFE/__tmp_31b22daf.c:167:9: error: expected declaration or statement at end of input
  167 |         token.value[0] = next_char(lexer
      |         ^~~~~
./samples/SAFE/__tmp_31b22daf.c:167:9: error: expected declaration or statement at end of input
